           ‘read_XSYG2R()’ and ‘write_RLum2CSV()’ to convert XSYG-file
           data to CSV-files; so far possible.

         • ‘PSL2Risoe.BINfileData()’: Converts an ‘RLum.Analysis’
           object produced by the function ‘read_PSL2R()’ to an
           ‘Risoe.BINfileData’ object.

         • ‘read_PSL2R()’: Imports PSL files produced by a SUERC
           portable OSL reader into R.

         • ‘write_RLum2CSV()’: Exports ‘RLum’-objects to CSV-files to
           improve the compatibility to other software.  Supported are
           only numerical values, i.e., ‘data.frame’, ‘matrix’ and
           ‘numeric’.

  New example data:

         • ‘ExampleData.fading’: Example data set for fading
           measurements of the IR50, IR100, IR150 and IR225 feldspar
           signals of sample UNIL/NB123. It further contains regular
           equivalent dose measurement data of the same sample, which
           can be used to apply a fading correction to. These data were
           kindly provided by Georgina King.

  Changes in S4-classes and methods:

         • Method ‘get_RLum’ for ‘RLum.Analysis’-objects did not
           respect ‘.pid’, fixed.

         • Method ‘get_RLum’ for ‘list’-objects now accepts lists with
           all kinds of ‘RLum’-objects. Previously, only lists of
           ‘RLum.Analysis’-objects were allowed.

         • ‘plot_RLum’ was not passing the argument ‘sub’, as it was
           fetched by the partial argument matching; fixed.

         • ‘set_RLum’ produced ‘NA’ as orignator, if the function
           calling the function ‘set_RLum()’ was called from outside of
           the package using the double colons (e.g.,
           ‘Luminescence::function()’); fixed.

  Bugfixes and changes:

         • ‘analyse_baSARL()’

             • Due to a typo in the manual the ‘method_contral’
               parameter ‘variable.names’ was not working if correclty
               typed as written in the manual (in the manual: