@@ -154,6 +154,7 @@ export(report_RLum)
 export(sTeve)
 export(set_RLum)
 export(set_Risoe.BINfileData)
+export(smooth_RLum)
 export(structure_RLum)
 export(template_DRAC)
 export(tune_Data)
@@ -178,6 +179,7 @@ exportMethods(replicate_RLum)
 exportMethods(set_RLum)
 exportMethods(set_Risoe.BINfileData)
 exportMethods(show)
+exportMethods(smooth_RLum)
 exportMethods(structure_RLum)
 import(data.table)
 import(magrittr)
